--- a/.eslintrc
+++ b/.eslintrc
@@ -15,5 +15,12 @@
         "sourceType": "module"
     },
     "rules": {
+//        "no-console": "off",
+//        "camelcase": "off",
+//        "no-underscore-dangle": "off",
+//        "import/no-extraneous-dependencies": "off",
+//        "import/prefer-default-export": "off",
+//        "func-names": "off",
+//        "no-param-reassign": "off"
     }
 }
