--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint ."
   },
   "devDependencies": {
+    "@babel/node": "^7.6.3",
+    "@babel/core": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "@babel/preset-env": "^7.6.3",
+    "babel-jest": "^24.9.0",
     "eslint": "6.1.0",
     "eslint-config-airbnb": "18.0.1",
     "eslint-plugin-import": "^2.18.2",
