--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Ralf Crisostomo",
   "license": "MIT",
   "scripts": {
-    "test": "NODE_ENV=test jest --coverage --config jest.config.js --detectOpenHandles",
+    "test": "yarn lint --fix && NODE_ENV=test jest --coverage --config jest.config.js --detectOpenHandles",
     "lint": "eslint ."
   },
   "engines": {
