--- a/.eslintrc
+++ b/.eslintrc
@@ -15,9 +15,9 @@
         "sourceType": "module"
     },
     "rules": {
-        "no-console": "off"
+        "no-console": "off",
 //        "camelcase": "off",
-//        "no-underscore-dangle": "off",
+        "no-underscore-dangle": "off"
 //        "import/no-extraneous-dependencies": "off",
 //        "import/prefer-default-export": "off",
 //        "func-names": "off",
