--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
     "rules": {
         "no-console": "off",
 //        "camelcase": "off",
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "no-unused-expressions": "off",
 //        "import/no-extraneous-dependencies": "off",
 //        "import/prefer-default-export": "off",
 //        "func-names": "off",
