--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "rules": {
         "no-console": "off",
 //        "camelcase": "off",
+        "no-shadow": "off",
         "no-underscore-dangle": "off",
         "no-unused-expressions": "off",
 //        "import/no-extraneous-dependencies": "off",
