--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
         "no-shadow": "off",
         "no-underscore-dangle": "off",
         "no-unused-expressions": "off",
+        "no-use-before-define": "off",
 //        "import/no-extraneous-dependencies": "off",
 //        "import/prefer-default-export": "off",
 //        "func-names": "off",
