--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     }
   },
   "devDependencies": {
-    "@babel/node": "^7.6.3",
     "@babel/core": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
+    "@babel/node": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
     "eslint": "6.1.0",
     "eslint-config-airbnb": "18.0.1",
@@ -35,5 +35,8 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0"
+  },
+  "dependencies": {
+    "chalk": "^2.4.2"
   }
 }
